# Mimir

./: .gitignore  CLAUDE.md  LICENSE  README.md  _gen_banner.py  config.example.toml  config.toml  mcp.json  pyproject.toml
src/: app.py  banner_art.py  cli.py  config.py
src/infrastructure/: __init__.py
src/infrastructure/context/: __init__.py  context_builder.py
src/infrastructure/llm/: __init__.py  base.py  client.py
src/infrastructure/llm/providers/: anthropic_provider.py  ollama_provider.py
src/infrastructure/mcp/: __init__.py  hub.py  manager.py  oauth.py  registry.py
src/mimir/: __init__.py  __main__.py  app.py  config.py
src/mimir/llm/: __init__.py  base.py
src/mimir/llm/providers/: anthropic_provider.py  ollama_provider.py  openai_provider.py
src/mimir/profile/: parser.py  service.py
src/profiles/: __init__.py  parser.py  service.py  store.py
src/profiles/sources/: __init__.py  base.py  file_source.py  notion_source.py  text_source.py
src/resources/: mcp.local.json
